lowercase to uppercase

--- a/views/admin/comment/index.ejs
+++ b/views/admin/comment/index.ejs
@@ -1,7 +1,7 @@
 <%- include('../layout/admin_header.ejs', { title : 'Comments' }) %>
 
 <section class="comments">
-   <h1 class="heading">user comments</h1>
+   <h1 class="heading">User comments</h1>
    <div class="show-comments">
       <% if (comments?.length) { %>
       <% comments?.forEach(comment => { %>
