--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -2,38 +2,38 @@
 
 <section class="dashboard">
 
-   <h1 class="heading">dashboard</h1>
+   <h1 class="heading">Dashboard</h1>
 
    <div class="box-container">
 
       <div class="box">
          <h3>welcome!</h3>
          <p><%= tutor.name  %></p>
-         <a href="/admin/profile" class="btn">view profile</a>
+         <a href="/admin/profile" class="btn">View profile</a>
       </div>
 
       <div class="box">
          <h3><%= total_content %></h3>
-         <p>total contents</p>
-         <a href="/admin/videos/add" class="btn">add new content</a>
+         <p>Total contents</p>
+         <a href="/admin/videos/add" class="btn">Add new content</a>
       </div>
 
       <div class="box">
          <h3><%= total_playlist %></h3>
-         <p>total playlists</p>
+         <p>Total playlists</p>
          <a href="/admin/playlists/add" class="btn">add new playlist</a>
       </div>
 
       <div class="box">
          <h3><%= total_content %></h3>
-         <p>total likes</p>
-         <a href="/admin/videos" class="btn">view contents</a>
+         <p>Total likes</p>
+         <a href="/admin/videos" class="btn">View contents</a>
       </div>
 
       <div class="box">
          <h3><%= total_content %></h3>
-         <p>total comments</p>
-         <a href="/admin/comments" class="btn">view comments</a>
+         <p>Total comments</p>
+         <a href="/admin/comments" class="btn">View comments</a>
       </div>
 
    </div>
