--- a/views/admin/layout/admin_header.ejs
+++ b/views/admin/layout/admin_header.ejs
@@ -46,12 +46,12 @@
             <h3><%= tutor.name %></h3>
             <span><%= tutor.profession %></span>
             <a href="/admin/profile" class="btn">view profile</a>
-            <a href="/admin/logout" onclick="return confirm('logout from this website?');" class="delete-btn">logout</a>
+            <a href="/admin/logout" onclick="return confirm('logout from this website?');" class="delete-btn">Logout</a>
          <% } else { %>
-         <h3>please login or register</h3>
+         <h3>Please login or register</h3>
           <div class="flex-btn">
-            <a href="/admin/login" class="option-btn">login</a>
-            <a href="/admin/register" class="option-btn">register</a>
+            <a href="/admin/login" class="option-btn">Login</a>
+            <a href="/admin/register" class="option-btn">Register</a>
          </div>
          <% } %>
       </div>
@@ -86,10 +86,10 @@
       </div>
 
    <nav class="navbar">
-      <a href="/admin/dashboard"><i class="fas fa-home"></i><span>home</span></a>
+      <a href="/admin/dashboard"><i class="fas fa-home"></i><span>Home</span></a>
       <a href="/admin/playlists"><i class="fa-solid fa-bars-staggered"></i><span>playlists</span></a>
-      <a href="/admin/videos"><i class="fas fa-graduation-cap"></i><span>contents</span></a>
-      <a href="/admin/comments"><i class="fas fa-comment"></i><span>comments</span></a>
+      <a href="/admin/videos"><i class="fas fa-graduation-cap"></i><span>Contents</span></a>
+      <a href="/admin/comments"><i class="fas fa-comment"></i><span>Comments</span></a>
       <a href="/admin/logout" onclick="return confirm('logout from this website?');"><i class="fas fa-right-from-bracket"></i><span>logout</span></a>
    </nav>
 
