--- a/views/admin/playlist/add.ejs
+++ b/views/admin/playlist/add.ejs
@@ -2,7 +2,7 @@
 
 <section class="playlist-form">
 
-   <h1 class="heading">create playlist</h1>
+   <h1 class="heading">Create playlist</h1>
 
    <form action="/admin/playlists/save" method="post" enctype="multipart/form-data">
       <p>playlist status <span>*</span></p>
@@ -11,11 +11,11 @@
          <option value="active">active</option>
          <option value="deactive">deactive</option>
       </select>
-      <p>playlist title <span>*</span></p>
+      <p>Playlist title <span>*</span></p>
       <input type="text" name="title" maxlength="100" required placeholder="enter playlist title" class="box">
-      <p>playlist description <span>*</span></p>
+      <p>Playlist description <span>*</span></p>
       <textarea name="description" class="box" required placeholder="write description" maxlength="1000" cols="30" rows="10"></textarea>
-      <p>playlist thumbnail <span>*</span></p>
+      <p>Playlist thumbnail <span>*</span></p>
       <input type="file" name="image" accept="image/*" required class="box">
       <input type="submit" value="create playlist" class="btn">
    </form>
