--- a/views/admin/playlist/index.ejs
+++ b/views/admin/playlist/index.ejs
@@ -4,7 +4,7 @@
 
    <div style="display:flex; justify-content: space-between;" class="heading">
       <div><h3 style="padding: 0;">Your playlists</h3></div>
-      <div><a href="/admin/playlists/add" class="btn">add playlist</a></div>
+      <div><a href="/admin/playlists/add" class="btn">Ad playlist</a></div>
    </div>
 
    <div class="box-container">      
@@ -24,7 +24,7 @@
                </div>
             </div>
             <div class="thumb">
-               <span>videos: <%= list.total_videos  %> </span>
+               <span>Videos: <%= list.total_videos  %> </span>
                <img src="/uploaded_files/<%= list.thumb  %>" alt="">
             </div>
             <h3 class="title"><%= list.title  %></h3>
