--- a/views/admin/profile/index.ejs
+++ b/views/admin/profile/index.ejs
@@ -2,35 +2,35 @@
    
 <section class="tutor-profile" style="min-height: calc(100vh - 19rem);"> 
 
-   <h1 class="heading">profile details</h1>
+   <h1 class="heading">Profile details</h1>
 
    <div class="details">
       <div class="tutor">
          <img src="/uploaded_files/<%= tutor.image %>" alt="">
          <h3><%= tutor.name %></h3>
          <span><%= tutor.profession %></span>
-         <a href="/admin/profile/edit" class="inline-btn">update profile</a>
+         <a href="/admin/profile/edit" class="inline-btn">Update profile</a>
       </div>
       <div class="flex">
          <div class="box">
             <span><%= total_playlist %></span>
             <p>total playlists</p>
-            <a href="/admin/playlists" class="btn">view playlists</a>
+            <a href="/admin/playlists" class="btn">View playlists</a>
          </div>
          <div class="box">
             <span><%= total_content %></span>
             <p>total videos</p>
-            <a href="/admin/videos" class="btn">view contents</a>
+            <a href="/admin/videos" class="btn">View contents</a>
          </div>
          <div class="box">
             <span><%= total_like %></span>
             <p>total likes</p>
-            <a href="/admin/videos" class="btn">view contents</a>
+            <a href="/admin/videos" class="btn">View contents</a>
          </div>
          <div class="box">
             <span><%= total_comment %></span>
             <p>total comments</p>
-            <a href="/admin/comments" class="btn">view comments</a>
+            <a href="/admin/comments" class="btn">View comments</a>
          </div>
       </div>
    </div>
