--- a/views/admin/search_page.ejs
+++ b/views/admin/search_page.ejs
@@ -2,7 +2,7 @@
 
 <section class="contents">
 
-   <h1 class="heading">contents</h1>
+   <h1 class="heading">Contents</h1>
 
    <div class="box-container">
       <% if (videos?.length > 0) { %>
@@ -32,7 +32,7 @@
             </div>
          <% }) %>
          <% } else{ %>
-         <p class="empty">no contents added yet!</p>
+         <p class="empty">No contents added yet!</p>
          <% } %>
    </div>
 
@@ -40,7 +40,7 @@
 
 <section class="playlists">
 
-   <h1 class="heading">playlists</h1>
+   <h1 class="heading">Playlists</h1>
 
    <div class="box-container">
    <% if (playlists?.length > 0) { %>
@@ -70,7 +70,7 @@
       </div>
    <% }) %>
    <% }else { %>
-   <p class="empty">no playlists found!</p>
+   <p class="empty">No playlists found!</p>
    <% } %>
 
    </div>
