--- a/views/admin/videos/index.ejs
+++ b/views/admin/videos/index.ejs
@@ -3,8 +3,8 @@
 <section class="contents">
 
    <div style="display:flex; justify-content: space-between;" class="heading">
-      <div><h3 style="padding: 0;">your contents</h3></div>
-      <div><a href="/admin/videos/add" class="btn">add content</a></div>
+      <div><h3 style="padding: 0;">Your contents</h3></div>
+      <div><a href="/admin/videos/add" class="btn">Add content</a></div>
    </div>
 
    <div class="box-container">
@@ -35,7 +35,7 @@
       </div>
    <% }) %>
    <% } else{ %>
-   <p class="empty">no contents added yet!</p>
+   <p class="empty">No contents added yet!</p>
    <% } %>
    </div>
 
