--- a/views/admin/videos/view.ejs
+++ b/views/admin/videos/view.ejs
@@ -22,7 +22,7 @@
       </div>
    <% } else { %>
    <p class="empty">
-      no contents added yet! <a href="add_content.php" class="btn" style="margin-top: 1.5rem;">add videos</a>
+      No contents added yet! <a href="add_content.php" class="btn" style="margin-top: 1.5rem;">Add videos</a>
    </p>
    <% } %>
    
@@ -31,7 +31,7 @@
 
 <section class="comments">
 
-   <h1 class="heading">user comments</h1>
+   <h1 class="heading">User comments</h1>
 
    
    <div class="show-comments">
@@ -52,7 +52,7 @@
          </div>
       <% }) %>
       <% } else { %>
-      <p class="empty">no comments added yet!</p>
+      <p class="empty">No comments added yet!</p>
       <% } %>
    </div>
    
