--- a/views/bookmark.ejs
+++ b/views/bookmark.ejs
@@ -4,7 +4,7 @@
 
 <section class="courses">
 
-   <h1 class="heading">bookmarked playlists</h1>
+   <h1 class="heading">Bookmarked playlists</h1>
 
    <div class="box-container">
       <% if (bookmarks && bookmarks.length > 0 ) { %>
