--- a/views/comment/edit.ejs
+++ b/views/comment/edit.ejs
@@ -3,7 +3,7 @@
 <!-- comment section start -->
 
 <section class="edit-comment">
-   <h1 class="heading">edti comment</h1>
+   <h1 class="heading">Edti comment</h1>
    <form action="/comments/update" method="post">
       <input type="hidden" name="comment_id" value="<%= comment.id  %>">
       <textarea name="comment" class="box" maxlength="1000" required placeholder="please enter your comment" cols="30" rows="10"><%= comment.comment  %></textarea>
