--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -11,7 +11,7 @@
       </div>
 
       <form action="/contact" method="post">
-         <h3>get in touch</h3>
+         <h3>Get In Touch</h3>
          <input type="text" placeholder="enter your name" required maxlength="100" name="name" class="box" value="<%= user?.name %>">
          <input type="email" placeholder="enter your email" required maxlength="100" name="email" class="box" value="<%= user?.email %>">
          <input type="text" min="0" max="9999999999" placeholder="enter your number" required maxlength="10" name="number" class="box">
@@ -25,14 +25,14 @@
 
       <div class="box">
          <i class="fas fa-phone"></i>
-         <h3>phone number</h3>
+         <h3>Phone number</h3>
          <a href="tel:1234567890">123-456-7890</a>
          <a href="tel:1112223333">111-222-3333</a>
       </div>
 
       <div class="box">
          <i class="fas fa-envelope"></i>
-         <h3>email address</h3>
+         <h3>Email address</h3>
          <a href="mailto:shaikhanas@gmail.com">shaikhanas@gmail.come</a>
          <a href="mailto:anasbhai@gmail.com">anasbhai@gmail.come</a>
       </div>
