--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -4,7 +4,7 @@
 
 <section class="courses">
 
-   <h1 class="heading">all courses</h1>
+   <h1 class="heading">All courses</h1>
 
    <div class="box-container">
 
