--- a/views/likes.ejs
+++ b/views/likes.ejs
@@ -4,7 +4,7 @@
 
 <section class="liked-videos">
 
-   <h1 class="heading">liked videos</h1>
+   <h1 class="heading">Liked videos</h1>
 
    <div class="box-container">
 
