--- a/views/search_course.ejs
+++ b/views/search_course.ejs
@@ -4,7 +4,7 @@
 
 <section class="courses">
 
-   <h1 class="heading">search results</h1>
+   <h1 class="heading">Search results</h1>
 
    <div class="box-container">
       <% if (courses?.length > 0) { %>
@@ -23,7 +23,7 @@
          </div>
       <% }) %>
       <% } else { %>
-      <p class="empty">no courses found!</p>
+      <p class="empty">No courses found!</p>
       <% } %>
    </div>
 
