--- a/views/teachers.ejs
+++ b/views/teachers.ejs
@@ -4,7 +4,7 @@
 
 <section class="teachers">
 
-   <h1 class="heading">expert tutors</h1>
+   <h1 class="heading">Expert Tutors</h1>
 
    <form action="/search_tutor" method="get" class="search-tutor">
       <input type="text" name="search" maxlength="100" placeholder="search tutor..." required>
@@ -14,7 +14,7 @@
    <div class="box-container">
 
       <div class="box offer">
-         <h3>become a tutor</h3>
+         <h3>Become a Tutor</h3>
          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum, magnam!</p>
          <a href="/admin/register" class="inline-btn">get started</a>
       </div>
