--- a/views/watch_video.ejs
+++ b/views/watch_video.ejs
@@ -44,7 +44,7 @@
 
 <section class="comments">
 
-   <h1 class="heading">add a comment</h1>
+   <h1 class="heading">Add a comment</h1>
 
    <form action="/comments/store" method="post" class="add-comment">
       <input type="hidden" name="video_id" value="<%= video?.id  %>">
@@ -55,7 +55,7 @@
       <% } %>
    </form>
 
-   <h1 class="heading">user comments</h1>
+   <h1 class="heading">User comments</h1>
 
    
    <div class="show-comments">
