--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -7,12 +7,12 @@
 
    <form action="/admin/login" method="post" class="login">
       <h3>Welcome back!</h3>
-      <p>your email <span>*</span></p>
-      <input type="email" name="email" placeholder="enter your email" maxlength="20" required class="box">
-      <p>your password <span>*</span></p>
-      <input type="password" name="password" placeholder="enter your password" maxlength="20" required class="box">
+      <p>Your email <span>*</span></p>
+      <input type="email" name="email" placeholder="Enter your email" maxlength="20" required class="box">
+      <p>Your password <span>*</span></p>
+      <input type="password" name="password" placeholder="Enter your password" maxlength="20" required class="box">
       <p class="link">
-         don't have an account? <a href="/admin/register">register new</a>
+         Don't have an account? <a href="/admin/register">Register now</a>
       </p>
       <input type="submit" value="Login"  class="btn">
    </form>
