--- a/views/admin/register.ejs
+++ b/views/admin/register.ejs
@@ -6,14 +6,14 @@
 <section class="form-container">
 
    <form class="register" action="/admin/register" method="POST" enctype="multipart/form-data">
-      <h3>register new</h3>
+      <h3>Register new</h3>
       <div class="flex">
          <div class="col">
             <p>your name <span>*</span></p>
             <input type="text" name="name" placeholder="eneter your name" maxlength="50" required class="box">
-            <p>your profession <span>*</span></p>
+            <p>Your profession <span>*</span></p>
             <select name="profession" class="box" required>
-               <option value="" disabled selected>-- select your profession</option>
+               <option value="" disabled selected>-- Select your profession</option>
                <option value="developer">developer</option>
                <option value="desginer">desginer</option>
                <option value="musician">musician</option>
@@ -26,19 +26,19 @@
                <option value="journalist">journalist</option>
                <option value="photographer">photographer</option>
             </select>
-            <p>your email <span>*</span></p>
+            <p>Your email <span>*</span></p>
             <input type="email" name="email" placeholder="enter your email" maxlength="20" required class="box">
          </div>
          <div class="col">
-            <p>your password <span>*</span></p>
+            <p>Your password <span>*</span></p>
             <input type="password" name="password" placeholder="enter your password" maxlength="20" required class="box">
-            <p>confirm password <span>*</span></p>
+            <p>Confirm password <span>*</span></p>
             <input type="password" name="confirm_password" placeholder="confirm your password" maxlength="20" required class="box">
             <p>select pic <span>*</span></p>
             <input type="file" name="image" accept="image/*" required class="box">
          </div>
       </div>
-      <p class="link">already have an account? <a href="/admin/login">login now</a></p>
+      <p class="link">Already have an account? <a href="/admin/login">Login now</a></p>
       <input type="submit"  value="register now" class="btn">
    </form>
 
