--- a/views/admin/videos/add.ejs
+++ b/views/admin/videos/add.ejs
@@ -2,7 +2,7 @@
 
 <section class="video-form">
 
-   <h1 class="heading">upload content</h1>
+   <h1 class="heading">Upload content</h1>
 
    <form action="/admin/videos/save" method="post" enctype="multipart/form-data">
       <p>video status <span>*</span></p>
