--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -3,12 +3,12 @@
 <section class="form-container">
 
    <form action="/login" method="post" class="login">
-      <h3>welcome back!</h3>
-      <p>your email <span>*</span></p>
-      <input type="email" name="email" placeholder="enter your email" maxlength="50" required class="box">
-      <p>your password <span>*</span></p>
+      <h3>Welcome back!</h3>
+      <p>Your email <span>*</span></p>
+      <input type="email" name="email" placeholder="Enter your email" maxlength="50" required class="box">
+      <p>Your password <span>*</span></p>
       <input type="password" name="password" placeholder="enter your password" maxlength="20" required class="box">
-      <p class="link">don't have an account? <a href="/register">register now</a></p>
+      <p class="link">Don't have an account? <a href="/register">Register now</a></p>
       <input type="submit" value="login now" class="btn">
    </form>
 
