--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -3,24 +3,24 @@
 <section class="form-container">
 
    <form class="register" action="/register" method="post" enctype="multipart/form-data">
-      <h3>create account</h3>
+      <h3>Create account</h3>
       <div class="flex">
          <div class="col">
-            <p>your name <span>*</span></p>
+            <p>Your name <span>*</span></p>
             <input type="text" name="name" placeholder="eneter your name" maxlength="50" required class="box">
-            <p>your email <span>*</span></p>
+            <p>Your email <span>*</span></p>
             <input type="email" name="email" placeholder="enter your email" maxlength="20" required class="box">
          </div>
          <div class="col">
-            <p>your password <span>*</span></p>
+            <p>Your password <span>*</span></p>
             <input type="password" name="password" placeholder="enter your password" min="4" required class="box">
-            <p>confirm password <span>*</span></p>
+            <p>Confirm password <span>*</span></p>
             <input type="password" name="confirm_password" placeholder="confirm your password" min="4" required class="box">
          </div>
       </div>
       <p>select pic <span>*</span></p>
       <input type="file" name="image" accept="image/*" required class="box">
-      <p class="link">already have an account? <a href="/login">login now</a></p>
+      <p class="link">Already have an account? <a href="/login">Login now</a></p>
       <input type="submit" name="submit" value="register now" class="btn">
    </form>
 
