--- a/views/playlist.ejs
+++ b/views/playlist.ejs
@@ -4,7 +4,7 @@
 
 <section class="playlist">
 
-   <h1 class="heading">playlist details</h1>
+   <h1 class="heading">Playlist details</h1>
 
    <div class="row">
       <% if (playlist && tutor) { %>
@@ -61,7 +61,7 @@
 
 <section class="videos-container">
 
-   <h1 class="heading">playlist videos</h1>
+   <h1 class="heading">Playlist videos</h1>
 
    <div class="box-container">
       <% if (videos?.length > 0) { %>
