--- a/views/profile/index.ejs
+++ b/views/profile/index.ejs
@@ -2,7 +2,7 @@
 
 <section class="profile">
 
-   <h1 class="heading">profile details</h1>
+   <h1 class="heading">Profile details</h1>
 
    <div class="details">
 
@@ -10,7 +10,7 @@
          <img src="uploaded_files/<%= user.image %>" alt="">
          <h3><%= user.name  %></h3>
          <p>student</p>
-         <a href="/profile/edit" class="inline-btn">update profile</a>
+         <a href="/profile/edit" class="inline-btn">Update profile</a>
       </div>
 
       <div class="box-container">
@@ -23,7 +23,7 @@
                   <span>saved playlists</span>
                </div>
             </div>
-            <a href="#" class="inline-btn">view playlists</a>
+            <a href="#" class="inline-btn">View playlists</a>
          </div>
 
          <div class="box">
@@ -34,7 +34,7 @@
                   <span>liked tutorials</span>
                </div>
             </div>
-            <a href="#" class="inline-btn">view liked</a>
+            <a href="#" class="inline-btn">View liked</a>
          </div>
 
          <div class="box">
@@ -42,10 +42,10 @@
                <i class="fas fa-comment"></i>
                <div>
                   <h3><%= total_comment %></h3>
-                  <span>video comments</span>
+                  <span>Video comments</span>
                </div>
             </div>
-            <a href="#" class="inline-btn">view comments</a>
+            <a href="#" class="inline-btn">View comments</a>
          </div>
 
       </div>
