--- a/views/admin/layout/admin_footer.ejs
+++ b/views/admin/layout/admin_footer.ejs
@@ -1,5 +1,5 @@
     <footer class="footer">
-        &copy; copyright @ <%= date.getFullYear() %> by <span>mr. web designer</span> | all rights reserved!
+        &copy; copyright @ <%= app_date.getFullYear() %> by <span>mr. web designer</span> | all rights reserved!
     </footer>
 <script src="/js/admin_script.js"></script>
 </body>
