--- a/views/admin/layout/admin_header.ejs
+++ b/views/admin/layout/admin_header.ejs
@@ -4,18 +4,23 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title><%= title %></title>
+   <title><%= title +" - " + app_name %></title>
 
    <!-- font awesome cdn link  -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 
    <!-- custom css file link  -->
    <link rel="stylesheet" href="/css/admin_style.css">
+   <style>
+      .order\:-1{
+         order: -1;
+      }
+   </style>
 
 </head>
 <body>
 
-<% messages.forEach(message => { %>
+<% messages?.forEach(message => { %>
    <div class="message">
       <span><%= message %></span>
       <i class="fas fa-times" onclick="this.parentElement.remove();"></i>
