--- a/views/components/footer.ejs
+++ b/views/components/footer.ejs
@@ -1,3 +1,3 @@
 <footer class="footer">
-   &copy; copyright @ <%= date.getFullYear() %> by <span>mr. web designer</span> | all rights reserved!
+   &copy; copyright @ <%= app_date.getFullYear() %> by <span>mr. web designer</span> | all rights reserved!
 </footer>
