--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -1,6 +1,6 @@
 <!-- footer section starts  -->
 <footer class="footer">
-    &copy; copyright @ <%= date.getFullYear() %> by <span>mr. web designer</span> | all rights reserved!
+    &copy; copyright @ <%= app_date.getFullYear() %> by <span>mr. web designer</span> | all rights reserved!
  </footer>
 <!-- footer section ends -->
 <!-- custom js file link  -->
