--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -4,13 +4,17 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title><%= title %></title>
+   <title><%= title +" - " + app_name %></title>
    <!-- font awesome cdn link  -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 
    <!-- custom css file link  -->
    <link rel="stylesheet" href="/css/style.css">
-
+   <style>
+      .order\:-1{
+         order: -1;
+      }
+   </style>
 </head>
 <body>
 
